--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body{
     max-width: 1600px;
     margin: 0 auto;
 }
+main{
+  width: 80%;
+  margin: 0 auto;
+}
 /* header style */
 header{
     padding-top: 1rem;
@@ -88,6 +92,16 @@ nav{
     font-size: 18px;
     
   }
+  .section-header{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+  }
+  .section-text-style-2{
+    font-size: 20px;
+    font-weight: bold;
+    color: #181818;
+  }
   /* banner style */
 #banner-greeting{
     font-size: 2.7rem;
@@ -126,7 +140,8 @@ nav{
 
 }
 /* responsive */
-@media screen and (max-width:992px) {
+
+@media screen and  (max-width:992px) {
     
       .banner-container{
           flex-direction: column;
@@ -144,3 +159,46 @@ nav{
 }
   
 }
+/* about section design */
+.about-section{
+  max-width: 1140px;
+  margin-top: 100px;
+  background-color: #FFF8F3;
+  border-radius: 1rem;
+  
+  
+}
+#about-section-content{
+  
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  padding: 10%;
+  gap: 2rem;
+  
+ 
+}
+.about-footer
+ {
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  gap: 2rem;
+ }
+ @media screen and (min-width:576px) and (max-width:1076px){
+  .about-footer
+ {
+  
+  grid-template-columns: repeat(2,1fr);
+  
+ }
+  
+ }
+ @media screen and  (max-width:576px){
+  .about-footer
+ {
+  
+  grid-template-columns: repeat(1,1fr);
+  
+ }
+  
+ }
