--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     gap: 3rem;
+    
   }
   #nav-link li{
     list-style: none;
@@ -201,4 +202,55 @@ nav{
   
  }
   
+ }
+/* skill section style */
+.skill-section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+.skill-section-content{
+  width: 80%;
+  margin:0 auto;
+  display: flex;
+  flex-direction: column;
+ 
+  gap: 1rem;
+  margin-top: 100px;
+  margin-bottom: 2rem;
+  text-align: center;
+}
+ .skill-card img{
+  width: 30px;
+ }
+ .skill-card-container{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  gap: 1rem;
+ }
+ .skill-card{
+  display: flex;
+  flex-direction: column;
+  max-width: 300px;
+  gap: 20px;
+  padding: 30px;
+  border: none;
+  border-radius: .8rem;
+  box-shadow: 0px 6px 50px 0px #b3b0b0;
+  transition: transform .3s;
+  
+ }
+ .skill-card:hover{
+  transform: scale(.99);
+ }
+ @media screen and (min-width:540px) and (max-width:1250px){
+  .skill-card-container{
+    grid-template-columns: repeat(2,1fr);
+  }
+ }
+ @media screen and (max-width:640px){
+  .skill-card-container{
+    grid-template-columns: repeat(1,1fr);
+  }
  }
