--- a/style.css
+++ b/style.css
@@ -254,3 +254,52 @@ nav{
     grid-template-columns: repeat(1,1fr);
   }
  }
+ /* footer style */
+ footer{
+  background-color: #FFF8F3;
+  margin-top: 100px;
+  padding: 10%;
+  display: flex;
+  gap: 5rem;
+  
+ }
+ input,textarea{
+ width: 400px;
+ padding: 1rem;
+ border: none;
+ border-radius: 10px;
+ box-shadow: 0 4px 4px rgba(224, 224, 224, 0.651);
+ }
+ textarea{
+  height: 180px;
+ }
+ .message-me h2{
+  margin-bottom: 1rem;
+ }
+ .footer-logo{
+  display: flex;
+  gap: 1rem;
+ }
+ .footer-content{
+  width: 50%;
+  display: flex;
+  flex-direction: column ;
+  gap: 1.2rem;
+ }
+ @media  screen and (max-width:992px) {
+  footer{
+    flex-direction: column-reverse;
+    align-items: center;
+    padding: 8%;
+  }
+  .footer-content{
+    width: 100%;
+  }
+  input,textarea{
+  width: 320px;
+ 
+ }
+ textarea{
+  height: 160px;
+ }
+ }
